--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-pin-input": "^1.3.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-share": "^5.0.3",
