--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@reduxjs/toolkit": "^2.0.1",
+    "@rsuite/icons": "^1.0.3",
     "axios": "^1.6.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-pin-input": "^1.3.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.0.4",
@@ -32,6 +34,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-lazy-load-image-component": "^1.6.3",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
